--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
+  text-align: center;
+  height: 100%;
+  background-color: #ecf0f5;
+}
+
+.logoImage {
+  width: 15rem;
+  height: 4rem;
+}
+
+.form-container {
+  position: fixed;
+  top: 30%;
+}
+
+.input-container {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.icon {
+  padding: 10px;
+  background: white;
+  color: black;
+  min-width: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-control {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-field {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: 0px solid;
+  border-left: 1px solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-field:focus {
+  border: 2px solid dodgerblue;
+}
+
+Button.Login-Button {
+  font-weight: 500;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+
+.login-trouble {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-direction: row;
 }
