--- a/salespage/src/App.css
+++ b/salespage/src/App.css
@@ -1,38 +1,265 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /*overflow-x: hidden;*/
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
+  text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+/*Navigation css*/
+.navigation-container {
+  background-color: #ecf0f5;
+}
+
+.logoImage {
+  width: 15rem;
+  height: 4rem;
+  float: left;
+  padding: 0.5rem 1rem 0;
+  margin-top: 0.5rem;
+}
+
+.input-container {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.icon {
+  padding: 10px;
+  background: #ecf0f5;
+  color: black;
+  min-width: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-field {
+  display: block;
+  width: 100%;
+  height: auto;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ffffff;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.notification-container {
+  margin: auto;
+}
+
+.user-navigation-container {
+  margin: auto;
+}
+
+.user-navigation {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: inherit;
+}
+
+.user-icon {
+  padding-right: initial;
+}
+
+a.nav-link {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 553px) {
+  .image-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .notification-container > .row {
+    flex-wrap: nowrap;
+  }
+
+  .user-navigation {
+    justify-content: center;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*Dashboard css*/
+.dashboard-container {
+  height: 100%;
+}
+
+.progress-bar-container {
+  background-color: #2a2935;
+}
+
+.progressBar {
+  background-color: #2a2935;
+  height: 100%;
+}
+
+.progressBar-icons {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.progress-bar-icon {
+  color: rgb(180, 180, 180);
+  padding: 0.25rem 0;
+}
+
+/*sales section*/
+.sales-section-container > .sales-section {
+  height: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  padding: 0 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.sales-section > .sales-header {
+  flex: 1;
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  width: 100%;
+}
+
+.text > h1 {
+  float: left;
+}
+
+.date-picker {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.date-button {
+    background: none;
+    border: 1px solid gray;
+    border-radius: 5px;
+    font-size: 0.75rem;
+}
+
+@media (max-width: 553px) {
+    .text {
+        display: flex;
+        justify-content: center;
+    }
+
+    .date-picker {
+        justify-content: center;
+    }
+}
+
+/*sales by location*/
+.sales-section > .sales-by-location {
+    flex: 3;
+    background-color: azure;
+    border-top: 0.25rem solid lightgreen;
+    margin: 1rem 0;
+}
+
+.location, .products {
+    padding: 0 15px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.location > .head {
+    flex: 1;
+}
+
+.locationtext {
+    padding: 1rem;
+}
+
+.locationtext > h3 {
+    border-bottom: 0.2rem solid lightgreen;
+    text-align: left;
+}
+
+.location > .map-view-container {
+    flex: 3;
+    margin: 0 0 1rem 0;
+}
+
+.map-view {
+    height: 100%;
+}
+
+.table-container {
+    margin: 0 1.5rem;
+    height: 100%;
+    background-color: #fff;
+}
+
+.tabel {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+/*Table styling start*/
+
+
+#sales {
+    text-align: center;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    border: 3px solid #ddd;
+    height: 90%;
+    width: 100%;
+}
+
+#sales td, #sales th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#sales th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #c6c6c6;
+    color: black;
+}
+
+/*Table styling end*/
+
+
+.sales-section > .sales-by-products {
+    flex: 2;
+    border-top: 0.2rem solid darkred;
+    margin: 1rem 0;
+}
+
+.sales-by-products > .products {
+    height: max-content;
+    background-color: azure;
+}
+
+.producttext {
+    padding: 1rem;
+}
+
+.producttext > h3 {
+    text-align: left;
 }
